# hifi

./: .clang-format  .eslintrc.js  .gitignore  README.md
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.cpp  Agent.h  AssignmentClient.cpp  AssignmentClient.h  AssignmentClientApp.cpp  AssignmentClientMonitor.cpp
cmake/macros/: AutoScribeShader.cmake  PackageLibrariesForDeployment.cmake  TargetCrashrpt.cmake
cmake/modules/: FindCrashrpt.cmake
cmake/templates/: NSIS.template.in
console/: package.json
console/src/: main.js
domain-server/: CMakeLists.txt
domain-server/resources/: describe-settings.json
domain-server/src/: BackupHandler.h  BackupSupervisor.cpp  BackupSupervisor.h  DomainContentBackupManager.cpp  DomainContentBackupManager.h  DomainServer.cpp  (+4 more)
examples/: components.js  componentsCreate.js  componentsExtra.js  componentsHome.js  componentsPlane.js  componentsServer.js  edit.js  entityManager.js  fps.js  leaves.js  map.js  module.js  newEdit.js  require.js  util.js
gesture/: GestureManager.html  decreaseAvatarSize.js  gestureRecognizer4.js  increaseAvatarSize.js  promise.js  resetAvatarSize.js
interface/: CMakeLists.txt
libraries/image/: CMakeLists.txt
libraries/image/src/image/: Image.cpp  TGAReader.cpp  TGAReader.h
loading-test/: dump_resource_load.py  resource_load.js
profiling/: index.js  launch.bat  launch.ps1  package.json  turnAvatar.js
script-archive/: gracefulControls.js
treeview/: index.html  index.js  style.css
tutorial/: ACAudioSearchAndInject_tutorial.js  entityData.js  portal.js  tutorial.js
(+347 files in other folders)
